update: improvment in boostrap variables css, and some sections

--- a/app/apps/pages/templates/partials/partial_hero.html
+++ b/app/apps/pages/templates/partials/partial_hero.html
@@ -1,15 +1,15 @@
 <!-- Hero Section -->
 <section class="d-flex flex-column background-container" id="hero-animation">
   <div class="dynamic-background"></div>
-  <div id="landingHero" class="section-py pt-0 pb-0">
+  <div id="landingHero" class="section-py pt-0 pb-0" style="z-index: 2;">
       <div class="container">
           <div id="desktopHero" class="section-py pb-0 d-none d-md-block">
               <div class="row align-items-center gy-12">
                   <div class="col-md-6 text-md-center">
                       <div class="hero-text-box text-md-start">
-                          <h1 class="text-white display-lg-3 display-md-5 display-sm-6 fw-extrabold">{{page_title}}</h1>
+                          <h1 class="text-white display-lg-3 display-md-3 display-sm-6 fw-extrabold">{{page_title}}</h1>
                           <p class="h5 text-white mt-3">{{page_subtitle}}</p>
-                          <a href="#landingContact" class="btn btn-lg bg-primary text-white mt-3">Contactar</a>
+                          <a href="#landingContact" class="btn btn-primary btn-outline-light btn-lg mt-3">Contactar</a>
                       </div>
                   </div>
                   <div class="col-md-6 mt-5">
@@ -25,7 +25,7 @@
                       <div class="d-flex flex-column hero-text-box text-md-start">
                           <h1 class="text-white text-center display-6 display-md-5 display-sm-6 fw-extrabold">{{page_title}}</h1>
                           <p class="text-center text-white mt-3">{{page_subtitle}}</p>
-                          <a href="#landingContact" class="btn bg-primary text-white mt-3">Contactar</a>
+                          <a href="#landingContact" class="btn btn-outline-secondary bg-primary text-white mt-3">Contactar</a>
                       </div>
                   </div>
                   <div class="d-flex justify-content-center">
