--- a/app/apps/pages/templates/partials/partial_benefits.html
+++ b/app/apps/pages/templates/partials/partial_benefits.html
@@ -1,12 +1,12 @@
-<section id="benefits" class="py-5 text-white" style="background-color: #2c2c54; padding: 15px;">
+<section id="benefits" class="py-5 text-white">
     <div class="container text-center">
-        <h2 class="fw-bold mb-3">AHORRA TIEMPO Y DINERO CON NOSOTROS.</h2>
-        <p class="mb-5">
+        <h2 class="fw-bold display-lg-4 display-md-4 display-sm-3 mb-3">AHORRA TIEMPO Y DINERO CON NOSOTROS.</h2>
+        <p class="h5 mb-5">
             Empieza a fortalecer tu presencia en el mercado y cuenta con el respaldo de nuestro equipo especializado.
         </p>
-        <div class="row" style="background-color: #2c2c54; padding: 15px;">
+        <div class="row">
             {% for feature in features_3 %}
-                <div class="col-md-3 mb-4">
+                <div class="col-md-6 col-sm-12 mb-4">
                     <div class="d-flex flex-column align-items-center">
                         <i class="fas fa-{{ feature.card_icon }} fa-3x mb-3"></i>
                         <h5 class="fw-bold">{{ feature.card_title }}</h5>
