--- a/app/apps/pages/templates/partials/partial_services.html
+++ b/app/apps/pages/templates/partials/partial_services.html
@@ -1,15 +1,14 @@
 <section id="services" class="py-5">
-        <!-- marketin digital-->
     <div class="container">
         <div class="row align-items-center mb-5">
             <div class="col-md-6">
-                <h2 class="fw-bold, display-2">{{ services_1.title|upper }}</h2>
-                <p class="display-3">{{ services_1.subtitle }}</p>
+                <h2 class="fw-bold display-2 text-dark">{{ services_1.title|upper }}</h2>
+                <p class="display-3 text-dark">{{ services_1.subtitle }}</p>
                 <ul class="list-unstyled">
                     {% for card in services_1.cards %}
-                        <li class="mb-3">
+                        <li class="mb-3 text-dark">
                             <i class="fas fa-{{ card.card_icon }} fa-lg text-primary me-2"></i>
-                            <strong>{{ card.card_title }}:</strong> {{ card.card_text }}
+                            <strong class="text-dark">{{ card.card_title }}:</strong> {{ card.card_text }}
                         </li>
                     {% endfor %}
                 </ul>
@@ -21,40 +20,38 @@
     </div>
 </section>
 
-        <!-- Desarrollo Web -->
-        <div class="row align-items-center mb-5">
-            <div class="col-md-6 order-md-2">
-                <h2 class="fw-bold, display-2">{{ services_2.title|upper }}</h2>
-                <p class="display-3">{{ services_2.subtitle }}</p>
-                <ul class="list-unstyled">
-                    {% for card in services_2.cards %}
-                        <li class="mb-3">
-                            <i class="fas fa-{{ card.card_icon }} fa-lg text-primary me-2"></i>
-                            <strong>{{ card.card_title }}:</strong> {{ card.card_text }}
-                        </li>
-                    {% endfor %}
-                </ul>
-            </div>
-            <div class="col-md-6 order-md-1 text-center">
-                <img src="" alt="{{ services_2.title }}" class="img-fluid">
-            </div>
-        </div>
+<div class="row align-items-center mb-5">
+    <div class="col-md-6 order-md-2">
+        <h2 class="fw-bold display-2 text-dark">{{ services_2.title|upper }}</h2>
+        <p class="display-3 text-dark">{{ services_2.subtitle }}</p>
+        <ul class="list-unstyled">
+            {% for card in services_2.cards %}
+                <li class="mb-3 text-dark">
+                    <i class="fas fa-{{ card.card_icon }} fa-lg text-primary me-2"></i>
+                    <strong class="text-dark">{{ card.card_title }}:</strong> {{ card.card_text }}
+                </li>
+            {% endfor %}
+        </ul>
+    </div>
+    <div class="col-md-6 order-md-1 text-center">
+        <img src="" alt="{{ services_2.title }}" class="img-fluid">
+    </div>
+</div>
 
-        <!-- Diseño Gráfico -->
-        <div class="row align-items-center">
-            <div class="col-md-6">
-                <h2 class="fw-bold, display-2">{{ services_3.title|upper }}</h2>
-                <p class="display-3">{{ services_3.subtitle }}</p>
-                <ul class="list-unstyled">
-                    {% for card in services_3.cards %}
-                        <li class="mb-3">
-                            <i class="fas fa-{{ card.card_icon }} fa-lg text-primary me-2"></i>
-                            <strong>{{ card.card_title }}:</strong> {{ card.card_text }}
-                        </li>
-                    {% endfor %}
-                </ul>
-            </div>
-            <div class="col-md-6 text-center">
-                <img src="" alt="{{ services_3.title }}" class="img-fluid">
-            </div>
-        </div>
+<div class="row align-items-center">
+    <div class="col-md-6">
+        <h2 class="fw-bold display-2 text-dark">{{ services_3.title|upper }}</h2>
+        <p class="display-3 text-dark">{{ services_3.subtitle }}</p>
+        <ul class="list-unstyled">
+            {% for card in services_3.cards %}
+                <li class="mb-3 text-dark">
+                    <i class="fas fa-{{ card.card_icon }} fa-lg text-primary me-2"></i>
+                    <strong class="text-dark">{{ card.card_title }}:</strong> {{ card.card_text }}
+                </li>
+            {% endfor %}
+        </ul>
+    </div>
+    <div class="col-md-6 text-center">
+        <img src="" alt="{{ services_3.title }}" class="img-fluid">
+    </div>
+</div>
